tests/ui/holding-key-and-inserting.stderr
error[E0499]: cannot borrow `db` as mutable more than once at a time
  --> $DIR/holding-key-and-inserting.rs:10:17
   |
8  |     let fortytwo = db.insert_int(Int(42));
   |                    -- first mutable borrow occurs here
9  |     assert_eq!(fortytwo.0, 42);
10 |     let fifty = db.insert_int(Int(50));
   |                 ^^ second mutable borrow occurs here
11 |     assert_eq!(fortytwo.0, 42);
   |     --------------------------- first borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
